<resources>
    <string name="app_name">Screen Off</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_enable">Enable the application</string>
    <string name="action_disable">Remove administrator privileges</string>
    <string name="warning_remove_dev">Warning: remove admin permissions shout down screen off application.</string>
    <string name="text_request_dev">Make this application a device administrator to turn off screen when you want with a single tap.</string>
    <string name="text_error">Error</string>
    <string name="text_version">v%s</string>
    <string name="text_welcome">Just a few tips!</string>
    <string name="text_great">Got it</string>
    <string name="text_welcome_msg">To start, <b>grant administrator privileges</b> to the application. We only use the \"Lock the Screen\" policy to turn off the phone display whenever you want.</string>
    <string name="text_how_to_use">Add a shortcut to your home or to any third party application to turn off the screen quickly with just one tap.</string>
    <string name="title_how_to_use">How to use:</string>
    <string name="text_attention">Attention</string>
    <string name="ask_remove_privilege">Are you sure you want to remove administrator privileges?</string>
    <string name="title_shortcut">Add Shortcut</string>
    <string name="title_third_party_app">Third party applications</string>
    <string name="subtitle_shortcut">Add shortcuts to your homescreen</string>
    <string name="subtitle_third_party_app" translatable="false">e.g. Power Toggles, Tasker…</string>
    <string name="title_toggle_notification">Show Ongoing Notification</string>
    <string name="subtitle_toggle_notification_on">Notification is visible</string>
    <string name="subtitle_toggle_notification_off">Notification is invisible</string>
    <string name="subtitle_notification">Tap to turn screen off</string>
    <string name="title_wake_up">Need a Wake Up app?</string>
    <string name="subtitle_wake_up">Same developer, Same Simplicity</string>
    <string name="text_welcome_msg_feedback">For any <b>feedback or request</b> use the community.</string>
    <string name="text_welcome_msg_fingerprint">Due to a bug in Android, <b>it is not currently support</b> the use of smart lock.</string>
    <string name="title_activity_donation">Help Developer</string>
    <string name="title_translate">Help with translations</string>
    <string name="subtitle_translate">Open a pull request on GitHub</string>
    <string name="donation_coffee">Coffee</string>
    <string name="donation_lunch">Lunch</string>
    <string name="donation_icecream">Ice Cream</string>
    <string name="donation_breakfast">Breakfast</string>
    <string name="text_donate">Make a Donation:</string>
    <string name="error_billing">Billing Error</string>
    <string name="text_thanks">Thanks for support!</string>
    <string name="title_developer">Find out my projects</string>
    <string name="root_request"><b>Grant root permissions</b> to the application to support smart lock!</string>
    <string name="title_help_uninstall">How to uninstall</string>
    <string name="title_root_function">Root Privileges</string>
    <string name="subtitle_root_function">Not immediately lock the device</string>
    <string name="message_help_uninstall">To uninstall you must remove, first, the administrative privileges.\nFinally, you can proceed to uninstall the app through the system.</string>
    <string name="text_tip_msg">Just to be clear (yep, again), we only ask you for access to your phone\'s \"Lock the Screen\" policy to turn off the display whenever you want.</string>
    <string name="text_policy">What we ask</string>
    <string name="accessibility_service_title">Screen Off Accessibility Service</string>
    <string name="accessibility_service_explanation">
        <b>Lock device: Accessibility Service</b>
        \nIn order to lock the screen, we need to set Screen Off as an \'Accessibility Service\'.
    </string>
    <string name="service_enabled">Service Enabled</string>

</resources>
