<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_how_to_use"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_how_to_use"
            android:textSize="16sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/colorAccent"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:text="@string/text_great"
        android:gravity="center"
        android:id="@+id/action_done"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp" />
</LinearLayout>