<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_welcome"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:tint="@android:color/black"
                    android:alpha="0.54"
                    android:src="@drawable/ic_action_hardware_smartphone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/all_text"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:text="@string/text_welcome_msg"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:tint="@android:color/black"
                    android:alpha="0.54"
                    android:src="@drawable/ic_action_communication_chat"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/all_text"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:text="@string/text_welcome_msg_feedback"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:id="@+id/fingerprint_tip"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:tint="@android:color/black"
                    android:alpha="0.54"
                    android:src="@drawable/ic_action_fingerprint"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/all_text"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:text="@string/text_welcome_msg_fingerprint"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorAccent"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:id="@+id/root_tip"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:text="@string/root_request"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>