<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:id="@+id/action_remove_p"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="6dp"
            android:src="@drawable/ic_action_remove_privilege"
            android:tint="@color/all_text"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/all_text"
            android:text="@string/action_disable" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:id="@+id/action_feedback"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="6dp"
            android:src="@drawable/ic_action_communication_chat"
            android:tint="@color/all_text"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"  />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/all_text"
            android:text="@string/action_feedback" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:id="@+id/action_uninstall"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="6dp"
            android:src="@drawable/ic_action_info"
            android:tint="@color/all_text"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"  />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/all_text"
            android:text="@string/title_help_uninstall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:id="@+id/action_donation"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="6dp"
            android:src="@drawable/ic_action_action_wallet_giftcard"
            android:tint="@color/all_text"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"  />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/all_text"
            android:text="@string/title_activity_donation" />
    </LinearLayout>
</LinearLayout>